fdo#63616: Fix GetBoundRect for rotated text in CoreText backend

Change-Id: I8c9ee84afd71481c2c6b002265b86e048f369f5c